--- a/css/style.css
+++ b/css/style.css
@@ -294,6 +294,8 @@ header {
     color: #FFF;
     font-size: 36px;
     font-weight: 400;
+    font-family: sevenSegment;
+    src: url(seven-segment.ttf);
 
   }
   @media screen and (min-width: 480px) {
